syntax = "proto3";
package icademo.interchainquery;

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/ThanhNhann/icademo/x/interchainquery/types";

message Query {
    string id = 1;
    string connection_id = 2;
    string chain_id = 3;
    string query_type = 4;
    bytes request = 5;
    string callback_module = 6;
    string callback_id = 7;
    // TODO:currently we setup timeout for 10 minutes, it should be changed to a dynamic value in the future
    uint64 timeout_timestamp = 8;
    google.protobuf.Duration timeout_duration = 9
      [ (gogoproto.nullable) = false, (gogoproto.stdduration) = true ];
    uint64 last_height = 10;
    uint64 submission_height = 11;
    bool is_sent = 12;
}

// GenesisState defines the epochs module's genesis state.
message GenesisState {
    repeated Query queries = 1 [ (gogoproto.nullable) = false ];
}